<resources>
    <string name="app_name">Коммуналка</string>
    <string name="comfortable_communal">Коммуналка</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="welcome_user">Уважаемый %1$s!</string>
    <string name="static_address_url">https://static-maps.yandex.ru/1.x/?ll=%2$s,%1$s&amp;size=650,350&amp;z=15&amp;l=map&amp;pt=%2$s,%1$s,pm2dbl~%2$s,%1$s</string>
    <string name="welcome_user_сonfirm_code">Добро пожаловать %1$s!</string>
    <string name="add_first_flat">Добавьте первое помещение, чтобы начать оплачивать ЖКХ</string>
    <string name="add_premises">Добавить помещение</string>
    <string name="comfortable_communal_apartment">Коммуналка</string>
    <string name="phone">Телефон</string>
    <string name="authorization">Авторизация</string>
    <string name="auth">Вход</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="have_no_account">Нет аккаунта?</string>
    <string name="registration_now">Регистрация</string>
    <string name="email">Почта (необязательно)</string>
    <string name="email_require">Почта</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="auth_now">Авторизоваться</string>
    <string name="thx_for_auth">Благодарим за авторизацию в нашем сервисе. Введите код потверждения, который мы прислали вам на телефон или почту:</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="resend_via">Отправить повторно через:</string>
    <string name="install_pin_code_short">Установите PIN-код</string>
    <string name="install_pin_code_long">Установите PIN-код, чтобы упростить доступ к приложению при следующем входе</string>
    <string name="repeat_pin_code_short">Повторите PIN-код</string>
    <string name="enter_pin_code">Введите PIN-код</string>
    <string name="enter_pin_code_second">Чтобы войти в приложение</string>
    <string name="check_phone_number">Вы неправильно указали номер телефона!</string>
    <string name="accept_user_licence_text">Согласие с Офертой приложения “Коммуналка”</string>
    <string name="phone_number_mock">+7 999 876 54 32</string>
    <string name="fio_mock">Иванов Иван Иванович</string>
    <string name="email_mock">ivanov@gmail.com</string>
    <string name="check_correct_input_data">проверьте корректность вводимых данных</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="auth_with_finger_print">Вход по отпечатку</string>
    <string name="user_pin_code">Использовать пин-код</string>
    <string name="repeat_send_sms_email">Отправить код по email</string>
    <string name="repeat_send_sms">Отправить код повторно</string>
    <string name="such_an_opportunity_will_appear_soon">Скоро появится такая возможность</string>
    <string name="not_necessary">Не нужно</string>
    <string name="need_faster">Сделать быстрее</string>
    <string name="forgot_pin_code">Забыли PIN-код?</string>
    <string name="enter_email_or_phone_to_restore_password">Введите почту или телефон, чтобы восстановить пароль</string>
    <string name="email_or_phone">Почта или телефон</string>
    <string name="restore_pin_code">Восстановить PIN-код</string>
    <string name="add_room">Добавить помещение</string>
    <string name="phone_hint">+7 999 876 54 32</string>
    <string name="email_hint">ivanov@gmail.com</string>
    <string name="user_licence_text_second">приложения \"Коммуналка\"</string>
    <string name="create_new_user">Добавить нового пользователя</string>
    <string name="send_receipt_to_email">Отправить чеки на почту</string>
</resources>