<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/content"
            app:layout_constraintEnd_toStartOf="@id/nameText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/comfortable_communal_apartment"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="@id/logo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_margin="16dp"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/auth_text"
                    style="@style/TextBold1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/registration_now"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/close" />

                <TextView
                    android:id="@+id/fio_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/robotobold"
                    android:text="Ваше ФИО"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/auth_text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fio_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fio_mock"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fio_text" />

                <TextView
                    android:id="@+id/phone_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/phone"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fio_edit" />

                <TextView
                    android:id="@+id/have_account_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/have_account"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/registration_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration" />

                <TextView
                    android:id="@+id/registration_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/auth_now"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/have_account_text"
                    app:layout_constraintTop_toBottomOf="@id/registration" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/user_licence_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_edit"/>

                <TextView
                    android:id="@+id/user_licence_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/accept_user_licence_text"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/user_licence_check"
                    app:layout_constraintTop_toTopOf="@id/user_licence_check"
                    app:layout_constraintBottom_toBottomOf="@id/user_licence_check"/>

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/user_licence_barrier"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:barrierDirection="bottom"
                        app:constraint_referenced_ids="user_licence_check, user_licence_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:backgroundTint="@color/dark_blue"
                    android:fontFamily="@font/robotoregular"
                    android:padding="8dp"

                    app:cornerRadius="8dp"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_licence_barrier" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/user_licence_barrier"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_mock"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_text" />

                <TextView
                    android:id="@+id/email_text"
                    style="@style/TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/email"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_edit" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_mock"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>